force-app/main/default/objects/Invoices__c/fields/Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due__c</fullName>
    <label>Payment Due</label>
    <type>Date</type>
</CustomField>