force-app/main/default/objects/Invoices__c/fields/Shipment_destination__c.field-meta.xml
<CustomField>
    <fullName>Shipment_destination__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Shipment Destination</label>
    <referenceTo>enrtcr__Site__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>