force-app/main/default/objects/Invoices__c/listViews/JB_HiFi_Invoices.listView-meta.xml
<ListView>
    <fullName>JB_HiFi_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Shipment_destination__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vendor__c</field>
        <operation>equals</operation>
        <value>jb hi-fi</value>
    </filters>
    <label>JB-HiFi Invoices</label>
</ListView>