force-app/main/default/objects/Invoices__c/listViews/Lenovo_Invoices.listView-meta.xml
<ListView>
    <fullName>Lenovo_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Shipment_destination__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vendor__c</field>
        <operation>equals</operation>
        <value>Lenovo</value>
    </filters>
    <label>Lenovo Invoices</label>
</ListView>